syntax = "proto3";
option go_package = "pkg/grpc";
package grpc;

message EncryptRequest {
  string type = 1;
  string plain_text = 2;
}

message EncryptResponse {
  string error_code = 1;
  string error_message = 2;
  string cipher_text = 3;
}

message DecryptRequest {
  string type = 1;
  string cipher_text = 2;
}

message DecryptResponse {
  string error_code = 1;
  string error_message = 2;
  string plain_text = 3;
}

service HSMService {
  rpc Encrypt(EncryptRequest) returns (EncryptResponse);
  rpc Decrypt(DecryptRequest) returns (DecryptResponse);
}